[package]
name = "nova"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twilight-cache-inmemory = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
